--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,10 @@
+h4.title {
+    font-size: 1.3em;
+    letter-spacing: 1px;
 
+    margin: 3rem 0;
+    text-align: center;
+}
 
 a {
     text-decoration: none;
@@ -12,3 +18,14 @@ a:visited {
 li {
     list-style: none;
 }
+
+.button {
+    flex-grow: 1;
+    width: 50%;
+    background-color: var(--jet);
+    border: solid 1px transparent;
+    padding: 4.3px;
+    margin: .5rem 0;
+    color: var(--seashell);
+}
+
