--- a/frontend/src/components/StoreItem/styles.css
+++ b/frontend/src/components/StoreItem/styles.css
@@ -20,6 +20,7 @@
     flex-direction: column;
     align-items: flex-end;
     flex-grow: 1;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
 #name-desktop {
