add cypress tests for storefront

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,6 +8,7 @@ h4.title {
 
 a {
     text-decoration: none;
+    color: inherit;
 }
 
 a:visited {
@@ -25,7 +26,7 @@ li {
     border: solid 1px transparent;
     padding: 4.3px;
     margin: .5rem 0;
-    color: var(--seashell);
+    color: white;
     text-shadow: 0 0 5px rgba(0, 0, 0, 0.45);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.45);
     transition: .17s;
