--- a/frontend/src/containers/Navbar/styles.css
+++ b/frontend/src/containers/Navbar/styles.css
@@ -1,57 +1,56 @@
-#nav-main {
-    background-color: var(--jet);
-
+.nav {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding: 5%;
-    box-shadow: 0 0 5px black;
+    gap: var(--spacer-md);
+    padding: var(--spacer-md);
 }
 
-#nav-title {
-    color: white;
-    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.45);
+.nav > h3 {
+    text-transform: lowercase;
+    margin: 0;
+    padding: 0;
+    min-width: fit-content;
+    text-align: center;
 }
 
-#nav-content {
+.nav__content {
     display: flex;
-    align-items: center;
-    gap: 1rem;
-    color: var(--medium-turq);
-    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.45);
+    justify-content: center;
+    width: 100%;
+    color: var(--dark);
+    gap: var(--spacer-lg)
 }
 
-#nav-content li:hover {
-    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.65);
-    cursor: pointer;
-}
-
-#nav-user {
-    color: var(--medium-turq);
+.nav__content__links, .nav__content__buttons {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 6px;
+    gap: calc(var(--spacer) / 2);
+    padding: 0;
+    margin: 0;
 }
 
-#nav-cart a {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 6px;
-    color: var(--medium-turq);
+.nav__content__buttons {
+    justify-content: flex-end;
 }
 
-@media screen and (min-width: 1080px) {
-    #nav-title {
-        font-size: 2em;
+@media only screen and (min-width: 768px) {
+    .nav {
+        gap: var(--spacer);
+        padding: var(--spacer);
+        flex-direction: row;
+        align-items: stretch;
     }
 
-    #nav-content li {
-        font-size: 1.2em;
+    .nav > h3 {
+        text-align: left;
     }
 
-    #nav-main {
-        padding: 2%;
+    .nav__content {
+        justify-content: space-between;
+    }
+
+    .nav__content__buttons {
+        padding-right: var(--spacer);
     }
 }
