--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,10 +63,33 @@ p {
     font-weight: var(--fw-n);
 }
 
+li {
+    font-size: var(--fs-p);
+    font-weight: var(--fw-n);
+    display: flex;
+    align-items: center;
+}
+
+.body {
+    font-size: var(--fs-p);
+    line-height: 38px;
+    max-width: 38ch;
+    font-weight: var(--fw-n);
+}
+
 .bg-dark {
     background: var(--dark) !important;
     color: var(--light) !important;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.button__1 {
+   box-sizing: content-box;
+
+
+    border: 1px solid var(--dark);
+    border-radius: 15px;
+    padding: 8px;
 }
 
 @media only screen and (min-width: 600px) {
