update background color

--- a/frontend/src/containers/Navbar/styles.css
+++ b/frontend/src/containers/Navbar/styles.css
@@ -5,6 +5,7 @@
     align-items: center;
     gap: var(--spacer-md);
     padding: var(--spacer-md);
+    background-color: var(--light);
 }
 
 .nav > h3 {
