--- a/frontend/src/containers/Storefront/styles.css
+++ b/frontend/src/containers/Storefront/styles.css
@@ -3,17 +3,22 @@
     justify-content: center;
     height: 100%;
     flex-grow: 1;
+    background-color: var(--light);
 }
 
 #store-grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    width: 100%;
+    grid-template-columns: 1fr;
+    padding: var(--spacer-md);
+    gap: var(--spacer-lg);
+    grid-auto-rows: 1fr;
+
+    /* width: 100%;
     padding: 10%;
     height: 100%;
 
     gap: 1rem;
-    max-width: 2000px;
+    max-width: 2000px; */
 }
 
 .message-container {
@@ -28,5 +33,26 @@
     #store-grid {
         grid-template-columns: repeat(3, 1fr);
         gap: 1.5rem;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    #store-grid {
+        grid-template-columns: 1fr 1fr;
+        gap: var(--spacer-md)
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    #store-grid {
+        grid-template-columns: repeat(3, 1fr);
+        gap: var(--spacer-md)
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    #store-grid {
+        grid-template-columns: repeat(4, 1fr);
+        gap: var(--spacer)
     }
 }
