add padding to about section

--- a/frontend/src/containers/About/styles.css
+++ b/frontend/src/containers/About/styles.css
@@ -4,6 +4,7 @@
     padding: var(--spacer-lg) 0;
     gap: 5rem;
     background-color: var(--light);
+    padding-bottom: calc(var(--spacer-lg) * 3);
 }
 
 .about__section {
