--- a/frontend/src/containers/Storefront/styles.css
+++ b/frontend/src/containers/Storefront/styles.css
@@ -1,4 +1,4 @@
-#store-main {
+.store {
     display: flex;
     justify-content: center;
     height: 100%;
@@ -6,22 +6,15 @@
     background-color: var(--light);
 }
 
-#store-grid {
+.store__grid {
     display: grid;
     grid-template-columns: 1fr;
     padding: var(--spacer-md);
     gap: var(--spacer-lg);
     grid-auto-rows: 1fr;
-
-    /* width: 100%;
-    padding: 10%;
-    height: 100%;
-
-    gap: 1rem;
-    max-width: 2000px; */
 }
 
-.message-container {
+.message {
     display: flex;
     height: 100%;
     flex-grow: 1;
@@ -30,28 +23,28 @@
 }
 
 @media screen and (min-width: 1440px) {
-    #store-grid {
+    .store__grid {
         grid-template-columns: repeat(3, 1fr);
         gap: 1.5rem;
     }
 }
 
 @media only screen and (min-width: 600px) {
-    #store-grid {
+    .store__grid {
         grid-template-columns: 1fr 1fr;
         gap: var(--spacer-md)
     }
 }
 
 @media only screen and (min-width: 992px) {
-    #store-grid {
+    .store__grid {
         grid-template-columns: repeat(3, 1fr);
         gap: var(--spacer-md)
     }
 }
 
 @media only screen and (min-width: 1200px) {
-    #store-grid {
+    .store__grid {
         grid-template-columns: repeat(4, 1fr);
         gap: var(--spacer)
     }
