--- a/frontend/src/components/Login/styles.css
+++ b/frontend/src/components/Login/styles.css
@@ -58,3 +58,9 @@
     outline: none;
     box-shadow: 0 0 0 2px var(--primary);
 }
+
+@media only screen and (min-width: 900px) {
+    .login {
+        padding: calc(var(--spacer) / 2);
+    }
+}
