--- a/frontend/src/components/Card/styles.css
+++ b/frontend/src/components/Card/styles.css
@@ -2,6 +2,8 @@
     min-height: fit-content;
     background-color: white;
     padding: calc(var(--spacer) / 3.5);
+    display: flex;
+    flex-direction: column;
 }
 
 .card:hover {
@@ -12,7 +14,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    height: 100%;
+    flex-grow: 1;
 }
 
 .card__container > img {
